--- a/style.css
+++ b/style.css
@@ -162,9 +162,13 @@ main {
 
 @media (max-width: 900px) {
   main {
-    margin-top: 5rem;
+    margin-top: 1rem;
     flex-direction: column;
     gap: 5rem;
+  }
+
+  .time {
+    margin-bottom: 1rem;
   }
 
   .light-theme,
