--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   display: grid;
   place-items: center;
   height: 100vh;
+  width: 96vw;
 }
 
 button {
@@ -88,6 +89,7 @@ main {
   align-items: center;
   gap: 18.8rem;
   padding: 5rem;
+  height: 96vh;
 }
 
 .time {
