--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
   font-family: 'Roboto', sans-serif;
   display: grid;
   place-items: center;
-  height: 100vh;
-  width: 96vw;
+  min-height: 100vh;
+  min-width: 96vw;
 }
 
 button {
@@ -89,7 +89,6 @@ main {
   align-items: center;
   gap: 18.8rem;
   padding: 5rem;
-  height: 96vh;
 }
 
 .time {
@@ -167,6 +166,7 @@ main {
     margin-top: 1rem;
     flex-direction: column;
     gap: 5rem;
+    padding: 0;
   }
 
   .time {
